# edu_numpy_pandas_pytorch

./: .gitignore  pyproject.toml  readme.md
notebooks/: image_as_array.ipynb  numpy_basics.ipynb  pandas_basics.ipynb  pytorch_basics.ipynb  yolo_instance_segmentation.ipynb
