[tool.poetry]
name = "numpy-cv-lecture"
version = "0.1.0"
description = "Lecture materials for NumPy and Computer Vision"
authors = ["Your Name <your.email@example.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
opencv-python = "^4.5.0"
Pillow = "^8.0.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^22.0.0"
isort = "^5.0.0"
flake8 = "^4.0.0" 